fixed comic sizing on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    overflow-x: hidden;
 }
 
 html {
@@ -174,7 +175,7 @@ button:active {
     display: flex;
     align-items: center;
     justify-content: center;
-    visibility: hidden;
+    display: none;
     transition: all 300ms ease;
     opacity: 0;
     transform: translate(100%);
@@ -186,7 +187,7 @@ button:active {
 }
 
 .menu--open .menu__backdrop {
-    visibility: visible;
+    display: flex;
     opacity: 1;
     transform: translate(0);
 }
@@ -421,7 +422,7 @@ FEATURES
 .book__title {
     font-size: 20px;
     margin-bottom: 8px;
-    height: 40px;
+    /* height: 40px; */
 }
 
 .book__title--link {
@@ -814,6 +815,9 @@ select {
 
 /* SMALL PHONES, LARGE SMARTPHONES */
 @media (max-width: 550px) {
+    .book__img--wrapper {
+        height: 280px;
+    }
     .btn__menu {
         display: block;
     }
@@ -835,5 +839,10 @@ select {
     }
     .cart__book--info {
         padding-left: 0;
+    }
+}
+@media (max-width: 400px) {
+    .book__img--wrapper {
+        height: 230px;
     }
 }
